@@ -1,3 +1,9 @@
+2017-5-x
+	-Added absorb staff back in. When did I even delete that code?
+	-Fixed healing specials healing for more than the enemy's remaining HP
+	-Fixed S skills not actually being taken off when you switch hero
+	-Fixed defiant res not working because I was looking for the skill "resiant res"
+
 2017-4-26:
 	-Added new skills: Watersweep, Ragnell, Heavy Blade, Spur Def Res, Guard
 
